# workboard-pm

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  CRM_PRD.md  HRM_PRD.md  Makefile  PMS_PRD.md  README.md  SOP_CRM.md  SOP_HRM.md  SOP_PMS.md  SOP_WSM.md  askpass.cmd  backend-logs.txt  backend_logs.txt  build_logs.txt  build_logs2.txt  build_logs3.txt  docker-compose.ngrok.yml  docker-compose.prod.yml  docker-compose.yml  logs_be.txt  prd.txt  remote-inspect-port9000.sh  repomix-output.xml
backend/: .dockerignore  Dockerfile  Dockerfile.prod  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_activity_log.py  0003_add_task_start_date.py  0004_add_recurring_task_fields.py  0005_add_custom_fields.py  0006_add_goals.py  0007_add_hrm_leave_payroll_tables.py  0008_add_positions_alter_departments.py  0009_add_contracts_salary_history.py  0010_add_recruitment_pipeline_tables.py  0011_add_attendance_insurance_alter_payroll.py  0012_add_performance_management_tables.py  0013_add_training_tables.py  0014_add_offboarding_tables.py  0015_add_assets_procurement_tables.py  0016_add_crm_leads_accounts_activities_campaigns_tickets.py  0017_crm_sop_workflow_fields.py  0018_add_sprints_and_agile_fields.py  0019_hrm_phase1_rbac_employee_statuses.py  0020_hrm_phase2_overtime_correction_models.py  0021_wms_device_serial_unique.py  (+8 more)
backend/app/: main.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_auth.py  test_rbac.py  test_sprint_crud.py  test_sprint_lifecycle.py  test_tasks.py
(+1021 files in other folders)
